--- a/adm/css/admin-custom.css
+++ b/adm/css/admin-custom.css
@@ -15,7 +15,7 @@
 
 /* layout */
 #container {flex: 1;background-color: var(--c-bg-blue-5);}
-#container > .inner:not(.in-between) {padding: var(--krds-pc-padding-card-small) var(--krds-pc-padding-card-medium);}
+#container > .inner:not(.in-between) {padding:var(--krds-pc-padding-card-medium);}
 
 .contents-box {border-radius:var(--krds-radius-xlarge2);background-color: var(--krds-light-color-surface-white);}
 .contents-box-shadow {box-shadow:0 0 2px 0 var(--krds-light-color-alpha-shadow1), 0 4px 8px 0 var(--krds-light-color-alpha-shadow2);}
