--- a/_common/resources/css/krds-custom.css
+++ b/_common/resources/css/krds-custom.css
@@ -36,6 +36,8 @@
 /* 아이콘 */
 .svg-icon {-webkit-mask-repeat: no-repeat;-webkit-mask-position: center center;-webkit-mask-size: contain;mask-repeat: no-repeat;mask-position: center center;mask-size: contain;}
 .svg-icon.disabled {background-color: var(--krds-color-light-gray-20);}
+.svg-icon.white {background-color:var(--krds-light-color-icon-inverse);}
+.svg-icon.blue {background-color:var(--krds-light-color-icon-primary);}
 [class$="-disabled"] {background-color: var(--krds-light-color-icon-gray-fill);}
 [class$="-fill"] {-webkit-mask-image: none;mask-image: none;background-color: transparent !important;background-size: contain;background-repeat: no-repeat;-webkit-mask: none;mask: none;}
 i[class*="svg-icon"] {text-indent: -999px;overflow: hidden;}
